profilelist1exp/unpackaged/objects/Volume_Based_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Outlook_1_Total__c</fullName>
        <formula>Outlook_1_CSMR__c + Outlook_1_LE__c + Outlook_1_PUB__c + Outlook_1_SMB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlook 1 (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_2_CSMR__c</fullName>
        <label>Outlook 2 (CSMR)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_2_Difference_CSMR__c</fullName>
        <formula>Outlook_2_CSMR__c - Plan_Breakout_CSMR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlook 2 Difference (CSMR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_2_Difference_LE__c</fullName>
        <formula>Outlook_2_LE__c - Plan_Breakout_LE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlook 2 Difference (LE)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_2_Difference_PUB__c</fullName>
        <formula>Outlook_2_PUB__c - Plan_Breakout_PUB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlook 2 Difference (PUB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_2_Difference_SMB__c</fullName>
        <formula>Outlook_2_SMB__c - Plan_Breakout_SMB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlook 2 Difference (SMB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_2_Difference_Total__c</fullName>
        <formula>Outlook_2_Difference_CSMR__c + Outlook_2_Difference_LE__c + Outlook_2_Difference_PUB__c + Outlook_2_Difference_SMB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlook 2 Difference (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_2_LE__c</fullName>
        <label>Outlook 2 (LE)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_2_PUB__c</fullName>
        <label>Outlook 2 (PUB)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_2_SMB__c</fullName>
        <label>Outlook 2 (SMB)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outlook_2_Total__c</fullName>
        <formula>Outlook_2_CSMR__c  +  Outlook_2_LE__c  +  Outlook_2_PUB__c  +  Outlook_2_SMB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlook 2 (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PUB__c</fullName>
        <label>PUB</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Plan_Breakout_CSMR__c</fullName>
        <label>Plan Breakout (CSMR)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Breakout_LE__c</fullName>
        <label>Plan Breakout (LE)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Breakout_PUB__c</fullName>
        <label>Plan Breakout (PUB)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Breakout_SMB__c</fullName>
        <label>Plan Breakout (SMB)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Breakout_Total__c</fullName>
        <formula>Plan_Breakout_CSMR__c + Plan_Breakout_LE__c + Plan_Breakout_PUB__c + Plan_Breakout_SMB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Breakout (Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMB__c</fullName>
        <label>SMB</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>UK-I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Vendor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipName>COGS_Forecast</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_MDF_Forecast__c</fullName>
        <label>Total MDF Forecast</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VBF_Unique_Field__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This unique filed is used to prevent the duplicate records as well as used in triggers</description>
        <label>VBF Unique Field</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Volume_Based_Forecast_filed__c</fullName>
        <label>Volume Based Forecast</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Volume_Based__c</fullName>
        <label>Volume Based %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>MDF Forecast</label>
    <nameField>
        <label>MDF Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDF Forecast</pluralLabel>
    <recordTypes>
        <fullName>Ala_Carte</fullName>
        <active>true</active>
        <label>Ala Carte</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volume_Based</fullName>
        <active>true</active>
        <label>Volume Based</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Viper_Forecast_Distribution_Equals_100</fullName>
        <active>true</active>
        <description>This validation rule ensures that when added up, all the forecast distribution fields will only add up to 100%.</description>
        <errorConditionFormula>OR (
CSMR__c + LE__c + SMB__c + PUB__c &gt; 1,
CSMR__c + LE__c + SMB__c + PUB__c &lt; 1
)</errorConditionFormula>
        <errorMessage>The Volume Based Forecast distribution for all 4 segments should add up to 100%.</errorMessage>
    </validationRules>
</CustomObject>